================
Waffle Changelog
================

v0.12
=====

- Drop support for Django<1.8 and Python<2.7.
- Moved bulk of code from waffle.*_is_active methods to .is_active
  instance methods.
- Centralized caching code behind Class.get() methods.
- Significant caching overhaul.


v0.11.1
=======

- Fix Django 1.9 support.
- Fix several Python >=3.4 issues.
- Fix output of `waffle_switch --list`.
- Fix small documentation issues.
- Cache a plain list instead of a ValuesListQuerySet.


v0.11
=====

- Support Django 1.8.
- Move from jingo-specific to generic Jinja2 template support.
- Added tools for integration testing.
- Drop Django 1.5 support.
- Fix several code and documentation bugs.
- Add optional redirect parameter to view decorators.


v0.10.2
=======

- Overhaul documentation.
- Move CLI commands to waffle_(flag|sample|switch) to be more polite.
- Add override_(flag|sample|switch) testing tools.
- Changed the default of WAFFLE_SECURE to True.


v0.10.1
=======

- Support Python 3.
- Support Django 1.7.
- Add WAFFLE_CACHE_NAME.
- Fix caching for empty lists.


v0.10.0
=======

- Replace waffle.get_flags with waffle.{FLAGS,SWITCHES,SAMPLES} in JS.
- Update Custom User Models for Django 1.6 support.
- Support WaffleJS inline in templates.
- Improve test infrastructure and coverage.


v0.9.2
======

- Add get_flags method to waffle.js.
- Fix issue with South migrations and custom user models in Django 1.5.
- Document command-line access and get more useful information from it.
- Support non-naive datetimes when appropriate.
- Fix a cache invalidation issue.


v0.9.1
======

- Real Django 1.5 support.
- JavaScript obeys WAFFLE_*_DEFAULT settings.

v0.9
====

- Reorganized documentation.
- Hash form values for better memcached keys.
- Simplified and improved Django template tags.
- Renamed JS functions to *_is_active to avoid reserved keywords.

v0.8.1
======

- Fix cache flushing issues.
- Fix order of flag_is_active checks.
- Add a waffle.urls module.